[package]
name = "persian-rug"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Framework for bringing together disparate objects with inconvenient relationships."
repository = "https://github.com/eds-collabora/persian-rug-rs"
keywords = [ "framework", "utility", "library", "storage", "reference" ]
categories = [ "data-structures", "memory-management", "rust-patterns" ]
readme = "../README.md"

[features]
default = []
clone-replace = [ "dep:clone-replace" ]

[dependencies]
persian-rug_derive = { version = "0.1.1", path = "../persian-rug_derive" }
clone-replace = { version = "0.1.1", optional=true }
